2021. 4.27. Modified zPH3DFReadSTL_Bin. [zeo_ph_stl]
2021. 4.20. Accelerated conversion from STL to zPH3D by using zVec3DTreeNN. [zeo_ph_stl]
2021. 4.19. Added zVec3DArray2Tree and zVec3DTree2Array. [zeo_vec3d_tree]
2021. 4.19. Modified zVec3DTreeAdd. [zeo_vec3d_tree]
2021. 4.19. Added zVec3DTreeAddID and modified zVec3DTreeAdd. [zeo_vec3d_tree]
2021. 4.19. Added size and id members to zVec3DTree. [zeo_vec3d_tree]
2021. 4.19. Added zVec3DTreeFPrint. [zeo_vec3d_tree]
2021. 4.19. Renamed zTri3DListInsert to zTri3DListAdd. [zeo_elem_list]
2021. 4.19. Renamed zLoop3DFromArray to zLoop3DCreate. [zeo_elem_list]
2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DAddrListCreate. [zeo_vec3d_list, app]
2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DArray2AddrList and modified its specification. [zeo_vec3d_list]
2021. 4.19. Renamed zVec3DListFromArray to zVec3DArray2List and modified its specification. [zeo_vec3d_list]
2021. 4.19. Renamed zLoop3DInsert to zLoop3DAdd. [zeo_elem_list, zeo_bv_ch2]
2021. 4.19. Renamed zVec3DAddrListInsert to zVec3DAddrListAdd. [zeo_vec3d_list, zeo_elem_list, app]
2021. 4.19. Renamed zVec3DListInsert to zVec3DListAdd. [zeo_vec3d_list, zeo_vec3d_tree, zeo_pointcloud, zeo_col_gjk]
2021. 4.19. Moved zVec3DList2Tree from zeo_vec3d_list to zeo_vec3d_tree, and abolished zeo_vec3d_list_tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
2021. 4.18. Added zVec3DTree2List and zVec3DList2Tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
2021. 4.18. Modified specification of zVec3DListNN. [zeo_vec3d_list]
2021. 4.18. Renamed zVecTree3D to zVec3DTree. [zeo_vec3d_tree]
2021. 4.17. Modified _zShape3DRotFromZTK. [zeo_shape]
2021. 4.16. Modified zPH3DFReadSTL_Bin to show the progress of reading to stderr. [zeo_ph_stl]
2021. 4.16. Modified _zSTLVertListReg to speed up find-and-insertion of a vertex. [zeo_ph_stl]
2021. 4.16. Added zMat3DIsIdent. [zeo_mat3d]