@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.6.13
+VERSION=1.7.0
 
-DEPENDENCY="zeda=1.4.0;zm=1.2.19"
+DEPENDENCY="zeda=1.5.0;zm=1.3.0"
